--- a/ProyectoIntegrador/package.json
+++ b/ProyectoIntegrador/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
-    "highcharts": "^11.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^10.7.1",
+    "highcharts": "^11.2.0",
     "highcharts-angular": "^3.1.2",
     "ng2-charts": "^4.1.1",
-    "pg": "^8.11.1",
+    "pg": "^8.11.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
