--- a/ProyectoIntegrador/package.json
+++ b/ProyectoIntegrador/package.json
@@ -24,12 +24,12 @@
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase": "^10.7.1",
     "highcharts": "^11.2.0",
     "highcharts-angular": "^3.1.2",
     "ng2-charts": "^4.1.1",
     "pg": "^8.11.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
