--- a/ProyectoIntegrador/package.json
+++ b/ProyectoIntegrador/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "highcharts": "^11.2.0",
     "highcharts-angular": "^3.1.2",
+    "jspdf": "^2.5.1",
     "ng2-charts": "^4.1.1",
     "pg": "^8.11.3",
     "rxjs": "~7.8.0",
